@@ -5,14 +5,17 @@ import com.nhohantu.tcbookbe.cms.dto.response.CmsCreateProductResponse;
 import com.nhohantu.tcbookbe.cms.repository.ICmsCategoryRepository;
 import com.nhohantu.tcbookbe.cms.repository.ICmsProductCategoryRepository;
 import com.nhohantu.tcbookbe.cms.repository.ICmsProductRepository;
+import com.nhohantu.tcbookbe.cms.repository.ICmsTagRepository;
 import com.nhohantu.tcbookbe.common.model.builder.ResponseBuilder;
 import com.nhohantu.tcbookbe.common.model.builder.ResponseDTO;
 import com.nhohantu.tcbookbe.common.model.entity.CategoryModel;
 import com.nhohantu.tcbookbe.common.model.entity.ProductCategoryModel;
 import com.nhohantu.tcbookbe.common.model.entity.ProductModel;
+import com.nhohantu.tcbookbe.common.model.entity.TagModel;
 import com.nhohantu.tcbookbe.common.model.enums.StatusCodeEnum;
 import com.nhohantu.tcbookbe.common.service.UserBasicInfoService;
 import com.nhohantu.tcbookbe.common.utils.Constant;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.modelmapper.ModelMapper;
@@ -21,6 +24,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Log4j2
@@ -31,7 +35,9 @@ public class CmsProductService {
     private final ICmsProductRepository productRepository;
     private final ICmsCategoryRepository categoryRepository;
     private final ICmsProductCategoryRepository productCategoryRepository;
+    private final ICmsTagRepository tagRepository;
 
+    @Transactional
     public ResponseEntity<ResponseDTO<CmsCreateProductResponse>> createProduct(CmsCreateProductRequest request) {
         if (request.getCategoryIds() == null || request.getCategoryIds().isEmpty()) {
             throw new IllegalArgumentException("Sản phẩm phải thuộc ít nhất 1 category");
@@ -50,6 +56,7 @@ public class CmsProductService {
             throw new IllegalArgumentException("Category không hợp lệ");
         }
 
+
         ProductModel product = ProductModel.builder()
                 .name(request.getName())
                 .description(request.getDescription())
@@ -58,6 +65,10 @@ public class CmsProductService {
                 .active(request.getActive() != null ? request.getActive() : false)
                 .mainImageUrl(request.getMainImageUrl() != null ? request.getMainImageUrl() : Constant.DEFAULT_IMAGE_URL)
                 .build();
+        if (request.getTagIds() != null && !request.getTagIds().isEmpty()) {
+            List<TagModel> tags = tagRepository.findAllById(request.getTagIds());
+            product.setTags(tags);
+        }
 
         List<ProductCategoryModel> productCategories = new ArrayList<>();
         for (CategoryModel cat : categories) {
@@ -75,9 +86,13 @@ public class CmsProductService {
         try {
             ProductModel result = productRepository.save(product);
 
-            List<CategoryModel> catList = result.getProductCategories().stream()
-                    .map(ProductCategoryModel::getCategory)
-                    .toList();
+//            List<CategoryModel> categories = result.getProductCategories().stream()
+//                    .map(ProductCategoryModel::getCategory)
+//                    .toList();
+
+            List<Long> tagIds = result.getTags().stream()
+                    .map(TagModel::getId)
+                    .collect(Collectors.toList());
 
             CmsCreateProductResponse response = CmsCreateProductResponse.builder()
                     .id(result.getId())
@@ -87,7 +102,8 @@ public class CmsProductService {
                     .quantity(result.getQuantity())
                     .active(result.getActive())
                     .mainImageUrl(result.getMainImageUrl())
-                    .categories(catList)
+                    .categories(categories)
+                    .tagIds(tagIds)
                     .build();
 
             return ResponseBuilder.okResponse("Tạo sản phẩm thành công", response, StatusCodeEnum.SUCCESS2000);
@@ -109,25 +125,74 @@ public class CmsProductService {
 //        return toResponse(product, categories);
 //    }
 
-    public CmsCreateProductResponse updateProduct(Long id, CmsCreateProductRequest request) {
-        ProductModel productModel = productRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Id not found for update"));
-        productModel.setName(request.getName());
-        productModel.setDescription(request.getDescription());
-        productModel.setPrice(request.getPrice());
-        productModel.setQuantity(request.getQuantity());
-        productModel.setMainImageUrl(request.getMainImageUrl());
-        productModel.setActive(request.getActive());
+    @Transactional
+    public CmsCreateProductResponse updateProduct(Long id, CmsCreateProductRequest req) {
 
-        ProductModel update = productRepository.save(productModel);
-                return CmsCreateProductResponse.builder()
-                        .name(update.getName())
-                        .description(update.getDescription())
-                        .price(update.getPrice())
-                        .quantity(update.getQuantity())
-                        .mainImageUrl(update.getMainImageUrl())
-                        .active(update.getActive())
-                        .build();
+        ProductModel product = productRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Product not found"));
+
+        // === scalar fields ===
+        product.setName(req.getName());
+        product.setDescription(req.getDescription());
+        product.setPrice(req.getPrice());
+        product.setSalePrice(req.getSalePrice());
+        product.setQuantity(req.getQuantity());
+        product.setActive(req.getActive());
+        product.setMainImageUrl(req.getMainImageUrl());
+        product.setVideoUrl(req.getVideoUrl());
+        product.setUnit(req.getUnit());
+        product.setSku(req.getSku());
+        product.setBrand(req.getBrand());
+        product.setWeight(req.getWeight());
+        product.setDiscountPercentage(req.getDiscountPercentage());
+        product.setRating(req.getRating());
+        product.setVariations(req.getVariations());
+
+        // === categories ===
+        if (req.getCategoryIds() != null) {
+            product.getProductCategories().clear();
+
+            List<CategoryModel> categories = categoryRepository.findAllById(req.getCategoryIds());
+            categories.forEach(cat -> {
+                ProductCategoryModel pcm = new ProductCategoryModel();
+                pcm.setProduct(product);
+                pcm.setCategory(cat);
+                product.getProductCategories().add(pcm);
+            });
+        }
+
+        // === tags ===
+        if (req.getTagIds() != null) {
+            List<TagModel> tags = tagRepository.findAllById(req.getTagIds());
+            product.setTags(tags);
+        }
+        ProductModel saved = productRepository.save(product);
+
+        // === map sang DTO ===
+        return CmsCreateProductResponse.builder()
+                .id(saved.getId())
+                .name(saved.getName())
+                .description(saved.getDescription())
+                .price(saved.getPrice())
+//                .salePrice(saved.getSalePrice())
+                .quantity(saved.getQuantity())
+                .active(saved.getActive())
+                .mainImageUrl(saved.getMainImageUrl())
+//                .videoUrl(saved.getVideoUrl())
+//                .unit(saved.getUnit())
+//                .sku(saved.getSku())
+//                .brand(saved.getBrand())
+//                .weight(saved.getWeight())
+//                .discountPercentage(saved.getDiscountPercentage())
+//                .rating(saved.getRating())
+//                .variations(saved.getVariations())
+//                .categoryIds(saved.getProductCategories().stream()
+//                        .map(pc -> pc.getCategory().getId())
+//                        .toList())
+                .tagIds(saved.getTags().stream()
+                        .map(TagModel::getId)
+                        .toList())
+                .build();
     }
 
     public void deleteProduct(Long id) {
